--- a/app/src/main/res/layout/activity_food_detials.xml
+++ b/app/src/main/res/layout/activity_food_detials.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -33,6 +33,16 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
+
+          <com.google.android.gms.ads.AdView
+              xmlns:ads="http://schemas.android.com/apk/res-auto"
+              android:id="@+id/banner_ad_view"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              ads:adSize="BANNER"
+              ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
+
+
           <TextView
               android:id="@+id/tv_food_Name"
               android:layout_width="match_parent"
@@ -82,22 +92,17 @@
                   <ImageView
                       android:layout_width="40dp"
                       android:layout_height="40dp"
-                      android:src="@drawable/ic_star"
+                      android:src="@drawable/ic_kalori"
                       android:layout_marginStart="18dp"/>
                   <TextView
+                      android:id="@+id/tv_calorie"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:text="4.08 "
+                      android:text="100 kal "
                       android:textSize="18sp"
-                      android:layout_marginStart="18dp"
+                      android:layout_marginStart="10dp"
                       android:textColor="@color/black"
                       android:textStyle="bold"/>
-                  <TextView
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:text="Rating"
-                      android:textSize="15sp"
-                      android:layout_marginStart="15dp"/>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="0dp"
@@ -107,7 +112,7 @@
                   <ImageView
                       android:layout_width="40dp"
                       android:layout_height="40dp"
-                      android:src="@drawable/ic_kal"
+                      android:src="@drawable/ic_level"
                       android:layout_marginStart="18dp"/>
                   <TextView
                       android:layout_width="match_parent"
@@ -155,6 +160,7 @@
               android:layout_marginTop="25dp"
               android:paddingBottom="15dp"
               android:paddingTop="15dp"/>
+
 
       </LinearLayout>
 
