--- a/app/src/main/res/layout/activity_onboard.xml
+++ b/app/src/main/res/layout/activity_onboard.xml
@@ -25,7 +25,7 @@
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="30sp"
-        android:textColor="@color/black"
+        android:textColor="@color/button_color"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="40dp"/>
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_description"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:backgroundTint="@color/orange"
+        android:backgroundTint="@color/button_color"
         android:layout_marginTop="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
