--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,119 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawerlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.home.HomeFragment"
-    android:background="@color/background">
-    <androidx.constraintlayout.widget.ConstraintLayout
+    tools:context=".ui.home.HomeFragment">
+
+
+    <!-- Navigation Drawer -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/drawer_items"
+        app:headerLayout="@layout/drawer_header" />
+
+    <!-- Main Content -->
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/background">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/material_toolbar"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:title="Recipe Run"
-            android:background="@color/white"/>
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/mc_banner"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            app:layout_constraintTop_toBottomOf="@+id/material_toolbar"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="18dp"
-            android:backgroundTint="@color/red">
-            <TextView
+            android:layout_height="wrap_content">
+
+            <!-- Toolbar -->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_topitem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Find Your Food"
-                android:textSize="25sp"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"/>
-            <TextView
+                android:background="@color/white"
+                android:padding="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <ImageButton
+                    android:id="@+id/button_menu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_menu"
+                    android:background="@android:color/transparent"
+                    android:padding="5dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent" />
+
+                <TextView
+                    android:id="@+id/toolbar_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Recipe Run"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+                <ImageButton
+                    android:id="@+id/button_notification"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_notifications"
+                    android:background="@android:color/transparent"
+                    android:padding="5dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <!-- Banner Image Slider -->
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/mc_banner"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Recipe Easily"
-                android:textSize="25sp"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="60dp"/>
-            <Button
-                android:layout_width="140dp"
-                android:layout_height="50dp"
-                android:text="Watch"
-                android:textStyle="bold"
-                android:textSize="15sp"
-                android:layout_gravity="bottom"
-                android:layout_marginBottom="40dp"
-                android:backgroundTint="@color/white"
-                android:textColor="@color/orange"
-                android:layout_marginStart="20dp"
-                android:drawableLeft="@drawable/ic_watch"/>
-            <ImageView
-                android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:src="@drawable/homeimg"
-                android:layout_gravity="end"/>
-        </com.google.android.material.card.MaterialCardView>
-        <TextView
-            android:id="@+id/tv_category"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Meal Category"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/mc_banner"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"/>
-        <TextView
-            android:id="@+id/tv_seeall"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="See All"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@+id/mc_banner"
-            android:gravity="end"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="10dp"/>
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="5dp"
+                app:layout_constraintTop_toBottomOf="@+id/cl_topitem">
 
-        <FrameLayout
-            android:id="@+id/category_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_seeall"/>
-        <TextView
-            android:id="@+id/tv_foodtitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Based on the type of food Your Like"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@+id/category_container"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"/>
-        <FrameLayout
-            android:id="@+id/food_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_foodtitle"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <com.denzcoskun.imageslider.ImageSlider
+                    android:id="@+id/image_slider"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:iss_auto_cycle="true"
+                    app:iss_period="1500"
+                    app:iss_delay="1500"
+                    app:iss_text_align="CENTER" />
+            </com.google.android.material.card.MaterialCardView>
 
+            <!-- Category Title -->
+            <TextView
+                android:id="@+id/tv_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Meal Category"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/mc_banner" />
 
-</androidx.core.widget.NestedScrollView>
+            <!-- See All -->
+            <TextView
+                android:id="@+id/tv_seeall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:gravity="end"
+                android:text="See All"
+                android:textColor="@color/button_color"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:drawableEnd="@drawable/ic_forward"
+                android:layout_marginEnd="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/mc_banner" />
+
+            <!-- Category Container -->
+            <FrameLayout
+                android:id="@+id/category_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_seeall" />
+
+            <!-- Most Popular Title -->
+            <TextView
+                android:id="@+id/tv_foodtitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Most Popular"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/category_container" />
+
+            <!-- View All -->
+            <TextView
+                android:id="@+id/view_all"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="View All"
+                android:textColor="@color/button_color"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:gravity="end"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
+                android:drawableEnd="@drawable/ic_forward"
+                app:layout_constraintTop_toBottomOf="@+id/category_container"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <!-- Food Container -->
+            <FrameLayout
+                android:id="@+id/food_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_foodtitle" />
+
+            <!-- See More -->
+            <TextView
+                android:id="@+id/see_more_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="see more"
+                android:textSize="18sp"
+                android:drawableEnd="@drawable/ic_down"
+                android:drawablePadding="8dp"
+                android:padding="8dp"
+                app:layout_constraintTop_toBottomOf="@id/food_container"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+
+</androidx.drawerlayout.widget.DrawerLayout>
