--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,97 +9,89 @@
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
-       <com.google.android.material.appbar.MaterialToolbar
-           android:id="@+id/material_toolbar"
+       <com.google.android.material.card.MaterialCardView
+           android:id="@+id/mc_search"
            android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           app:title="Recipe Run"
+           android:layout_height="220dp"
+           app:cardElevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
-           android:background="@color/white"/>
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:shapeAppearanceOverlay="@style/BottonRoundedCard"
+           android:backgroundTint="@color/button_color">
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="vertical">
+               <TextView
+                   android:id="@+id/title_text1"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:text="Search"
+                   android:textColor="@color/white"
+                   android:textStyle="bold"
+                   android:textSize="30sp"
+                   android:layout_marginStart="10dp"
+                   android:layout_marginTop="20dp"/>
+               <LinearLayout
+                   android:id="@+id/searchView"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:orientation="horizontal"
+                   app:layout_constraintTop_toBottomOf="@+id/title_text1"
+                   android:padding="8dp"
+                   android:background="@drawable/search_background"
+                   android:gravity="center_vertical"
+                   android:layout_marginStart="8dp"
+                   android:layout_marginEnd="10dp"
+                   android:layout_marginTop="10dp">
 
-       <LinearLayout
-           android:id="@+id/searchView"
-           xmlns:android="http://schemas.android.com/apk/res/android"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="horizontal"
-           app:layout_constraintTop_toBottomOf="@+id/material_toolbar"
-           android:padding="8dp"
-           android:background="@drawable/search_background"
-           android:gravity="center_vertical"
-           android:layout_marginStart="10dp"
-           android:layout_marginEnd="10dp"
-           android:layout_marginTop="10dp">
+                   <EditText
+                       android:id="@+id/searchEditText"
+                       android:layout_width="0dp"
+                       android:layout_height="40dp"
+                       android:layout_weight="1"
+                       android:background="@android:color/transparent"
+                       android:drawablePadding="10dp"
+                       android:hint="Search..."
+                       android:inputType="text"
+                       android:padding="10dp"
+                       android:textColor="#000000"
+                       android:textColorHint="#999999" />
 
-           <EditText
-               android:id="@+id/searchEditText"
-               android:layout_width="0dp"
-               android:layout_height="40dp"
-               android:layout_weight="1"
-               android:hint="Search..."
-               android:background="@android:color/transparent"
-               android:padding="10dp"
-               android:textColor="#000000"
-               android:textColorHint="#999999"
-               android:inputType="text"
-               android:drawablePadding="10dp" />
+                   <ImageView
+                       android:id="@+id/searchIcon"
+                       android:layout_width="40dp"
+                       android:layout_height="40dp"
+                       android:src="@drawable/ic_search"
+                       android:contentDescription="Search Icon"
+                       android:padding="8dp"/>
+               </LinearLayout>
+               <TextView
+                   android:id="@+id/recommend"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:text="Recommend for you"
+                   android:textStyle="bold"
+                   android:textSize="22sp"
+                   android:textColor="@color/white"
+                   android:layout_marginStart="10dp"
+                   android:layout_marginTop="10dp"/>
+           </LinearLayout>
 
-           <ImageView
-               android:id="@+id/searchIcon"
-               android:layout_width="40dp"
-               android:layout_height="40dp"
-               android:src="@drawable/ic_search"
-               android:contentDescription="Search Icon"
-               android:padding="8dp"/>
-       </LinearLayout>
+       </com.google.android.material.card.MaterialCardView>
+
+
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
-           app:layout_constraintTop_toBottomOf="@+id/searchView"
+           app:layout_constraintTop_toBottomOf="@+id/mc_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp"
-           android:layout_marginTop="10dp"/>
-<!--       <FrameLayout-->
-<!--           android:id="@+id/specialfood_container"-->
-<!--           android:layout_width="match_parent"-->
-<!--           android:layout_height="wrap_content"-->
-<!--           android:layout_marginLeft="10dp"-->
-<!--           android:layout_marginRight="10dp"-->
-<!--           android:layout_marginTop="10dp"-->
-<!--           app:layout_constraintTop_toBottomOf="@+id/material_toolbar"/>-->
-<!--       <TextView-->
-<!--           android:id="@+id/just_for_you"-->
-<!--           android:layout_width="match_parent"-->
-<!--           android:layout_height="wrap_content"-->
-<!--           android:text="Just For You"-->
-<!--           app:layout_constraintTop_toBottomOf="@+id/specialfood_container"-->
-<!--           android:textColor="@color/black"-->
-<!--           android:textSize="20sp"-->
-<!--           android:layout_marginStart="10dp"-->
-<!--           android:textStyle="bold"-->
-<!--           android:layout_marginTop="15dp"/>-->
-<!--       <TextView-->
-<!--           android:id="@+id/see_all"-->
-<!--           android:layout_width="match_parent"-->
-<!--           android:layout_height="wrap_content"-->
-<!--           app:layout_constraintTop_toBottomOf="@+id/specialfood_container"-->
-<!--           android:gravity="end"-->
-<!--           android:text="See All"-->
-<!--           android:layout_marginEnd="10dp"-->
-<!--           android:textStyle="bold"-->
-<!--           android:textSize="16sp"-->
-<!--           android:layout_marginTop="15dp"/>-->
-<!--       <FrameLayout-->
-<!--           android:id="@+id/otherfood_container"-->
-<!--           android:layout_width="match_parent"-->
-<!--           android:layout_height="wrap_content"-->
-<!--           android:layout_marginLeft="10dp"-->
-<!--           android:layout_marginRight="10dp"-->
-<!--           android:layout_marginTop="10dp"-->
-<!--           app:layout_constraintTop_toBottomOf="@+id/see_all"/>-->
+           android:layout_marginTop="5dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
